<resources>
    <string name="app_name">CORNULuc_Formulaire</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="name">Enter your name here</string>
    <string name="firstname">Enter your first name here</string>
    <string name="validate">Validate</string>
    <string name="hint_mail">Enter name and firstname first</string>
    <string name="mister">Mr.</string>
    <string name="miss">Mrs.</string>
    <string name="hourplay">Amount</string>
    <string name="reset">Reset</string>
    <string name="generate">Get MAIL</string>

    <!-- code -->
    <string name="l1">C</string>
    <string name="l2">C++</string>
    <string name="l3">Java</string>
    <string name="l4">Pascal</string>
    <string name="l5">Javascript</string>
    <string name="l6">PHP</string>
    <string name="l7">C#</string>
</resources>